Saque pusab, algunos cambios esteticos, y yo que se que mas XD

--- a/mods.html
+++ b/mods.html
@@ -21,7 +21,7 @@
 			<div id="Navbar_loader">Loading Navbar...</div>
 			
 			<!-- CONTENIDO -->
-			<h1><img src="images/cacoanim2.gif" class="titleImg"> My Doom Mods <img src="images/cacoanim2.gif" class="titleImg"></h1>
+			<h1>My Doom Mods</h1>
 			
 			
 			<!-- Dimensional Weirdness -->
@@ -66,7 +66,7 @@
 				<summary><h2 class="displayInline">FURDEMON</h2></summary>
 				<br>
 				
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/kRN8CzcrLwg"></div>
+				<div class="youtube_video_insert" video="kRN8CzcrLwg"></div>
 
 				<br>
 
@@ -171,7 +171,7 @@ The sky of fire of the PSX version: Scalliano / Fenderc01</p>
 
 			<br><hr><br>
 			
-			<h1><img src="images/cacoanim2.gif" class="titleImg"> Collab Doom Mods <img src="images/cacoanim2.gif" class="titleImg"></h1>
+			<h1>Collab Doom Mods</h1>
 			<!-- NEGATIVEONE -->
 			<details>
 				<summary><h2 class="displayInline">Doom -1 (NEGATIVEONE)</h2></summary>
@@ -190,7 +190,7 @@ The sky of fire of the PSX version: Scalliano / Fenderc01</p>
 				<li>Game mode: Single player/Coop/Deathmatch</li>
 				<li>IWAD: DOOM2.wad</li>
 				<li>Recomended engine: Boom/MBF to up.</li>
-				<li>Maps: 34 (MAP01 - MAP32, and MAP33/34 are jokes)</li>
+				<li>Maps: 35</li>
 				<li>Difficulty settings: Implemented on some of the levels.</li>
 				</ul>
 
