--- a/mods_es.html
+++ b/mods_es.html
@@ -67,7 +67,7 @@
 				<summary><h2 class="displayInline">FURDEMON</h2></summary>
 				
 				<br>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/kRN8CzcrLwg"></div>
+				<div class="youtube_video_insert" video="kRN8CzcrLwg"></div>
 				<br>
 
 				<p>Se instaló una nueva base de demonios en la tierra, y debes robar sus datos de invasión para contrarrestar los ataques, sin embargo te das cuenta del verdadero plan de FURDEMON, bastante extraño: convertir a todos los habitantes del planeta en una especie de "furros" para atacar a otros planetas. ¡Debes destruir FURDEMON lo antes posible!</p> 
@@ -188,7 +188,7 @@ El cielo de fuego de Doom para playstation: Scalliano / Fenderc01</p>
 				<li>Modo de juego: Solo/Coop/Deathmatch</li>
 				<li>IWAD: DOOM2.wad</li>
 				<li>Motor recomendado: Boom/MBF to up.</li>
-				<li>Mapas: 34 (MAP01 - MAP32, y MAP33/34 son bromas)</li>
+				<li>Mapas: 35</li>
 				<li>Ajustes de dificultad: Implementados en algunos de los niveles.</li>
 				</ul>
 
