--- a/music.html
+++ b/music.html
@@ -42,11 +42,11 @@
 				</ul>
 				<hr>
 				<h3>ミラーリングされた火星</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/5lp35swHGHg"></div>
+				<div class="youtube_video_insert" video="5lp35swHGHg"></div>
 				
 				<hr>
 				<h3>Robotic Invasion</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/YGAwR3g_rLc"></div>
+				<div class="youtube_video_insert" video="YGAwR3g_rLc"></div>
 				<br>
 			</details>
 
@@ -60,10 +60,10 @@
 
 				<hr>
 				<h3>A Complete Dimension For Demons</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/euvZJFqBr5M"></div>
+				<div class="youtube_video_insert" video="euvZJFqBr5M"></div>
 				<hr>
 				<h3>Final Hell</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/ynYNrCdA8jc"></div>
+				<div class="youtube_video_insert" video="ynYNrCdA8jc"></div>
 				<br>
 			</details>
 			
@@ -76,10 +76,10 @@
 
 				<hr>
 				<h3>OpulenGZ</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/mcfR8M3D-L0"></div>
+				<div class="youtube_video_insert" video="mcfR8M3D-L0"></div>
 				<hr>
 				<h3>Metal Furries</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/nQpLa5yMwBA"></div>
+				<div class="youtube_video_insert" video="nQpLa5yMwBA"></div>
 				<br>
 			</details>
 			
@@ -95,7 +95,7 @@
 				in which i collaborated with some mapping, a dehacked turret and this theme.<br>
 				Its my first MIDI, so it isnt the best song that i made xD.
 				</p>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/snYtBhmoQpQ"></div>
+				<div class="youtube_video_insert" video="snYtBhmoQpQ"></div>
 				<br>
 			</details>
 			
