--- a/music_es.html
+++ b/music_es.html
@@ -44,11 +44,11 @@
 				
 				<hr>
 				<h3>ミラーリングされた火星</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/5lp35swHGHg"></div>
+				<div class="youtube_video_insert" video="5lp35swHGHg"></div>
 				
 				<hr>
 				<h3>Robotic Invasion</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/YGAwR3g_rLc"></div>
+				<div class="youtube_video_insert" video="YGAwR3g_rLc"></div>
 				<br>
 			</details>
 			
@@ -61,10 +61,10 @@
 				<br>Nuclear Fusion, de ZUN sacado de Touhou 11 (el tema del nucleardemon).</p>
 				<hr>
 				<h3>A Complete Dimension For Demons</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/euvZJFqBr5M"></div>
+				<div class="youtube_video_insert" video="euvZJFqBr5M"></div>
 				<hr>
 				<h3>Final Hell</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/ynYNrCdA8jc"></div>
+				<div class="youtube_video_insert" video="ynYNrCdA8jc"></div>
 				<br>
 			</details>
 			
@@ -76,10 +76,10 @@
 				<br>Las demas son los temas originales del DOOM 2.</p>
 				<hr>
 				<h3>OpulenGZ</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/mcfR8M3D-L0"></div>
+				<div class="youtube_video_insert" video="mcfR8M3D-L0"></div>
 				<hr>
 				<h3>Metal Furries</h3>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/nQpLa5yMwBA"></div>
+				<div class="youtube_video_insert" video="nQpLa5yMwBA"></div>
 				<br>
 			</details>
 
@@ -94,7 +94,7 @@
 				en el cual colabore mapeando, una torreta dehacked y este tema.<br>
 				Es mi primer midi, asi que no es la mejor cancion que hice xD.
 				</p>
-				<div class="youtube_video_insert" video="https://www.youtube.com/embed/snYtBhmoQpQ"></div>
+				<div class="youtube_video_insert" video="snYtBhmoQpQ"></div>
 				<br>
 			</details>	
 			
