Saque los avisos de youtube porque resultaban molestos.

--- a/mods.html
+++ b/mods.html
@@ -102,7 +102,7 @@
 				<summary><h2 class="displayInline">FURDEMON</h2></summary>
 				<br>
 				
-				<div class="youtube_video_insert" video="kRN8CzcrLwg"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/kRN8CzcrLwg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 				<br>
 
