--- a/mods_es.html
+++ b/mods_es.html
@@ -108,7 +108,7 @@
 				<summary><h2 class="displayInline">FURDEMON</h2></summary>
 				
 				<br>
-				<div class="youtube_video_insert" video="kRN8CzcrLwg"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/kRN8CzcrLwg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br>
 
 				<p>Se instaló una nueva base de demonios en la tierra, y debes robar sus datos de invasión para contrarrestar los ataques, sin embargo te das cuenta del verdadero plan de FURDEMON, bastante extraño: convertir a todos los habitantes del planeta en una especie de "furros" para atacar a otros planetas. ¡Debes destruir FURDEMON lo antes posible!</p> 
