--- a/music.html
+++ b/music.html
@@ -42,11 +42,11 @@
 				</ul>
 				<hr>
 				<h3>ミラーリングされた火星</h3>
-				<div class="youtube_video_insert" video="5lp35swHGHg"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/5lp35swHGHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				
 				<hr>
 				<h3>Robotic Invasion</h3>
-				<div class="youtube_video_insert" video="YGAwR3g_rLc"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/YGAwR3g_rLc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br>
 			</details>
 
@@ -60,10 +60,10 @@
 
 				<hr>
 				<h3>A Complete Dimension For Demons</h3>
-				<div class="youtube_video_insert" video="euvZJFqBr5M"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/euvZJFqBr5M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<hr>
 				<h3>Final Hell</h3>
-				<div class="youtube_video_insert" video="ynYNrCdA8jc"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/ynYNrCdA8jc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br>
 			</details>
 			
@@ -76,10 +76,10 @@
 
 				<hr>
 				<h3>OpulenGZ</h3>
-				<div class="youtube_video_insert" video="mcfR8M3D-L0"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/mcfR8M3D-L0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<hr>
 				<h3>Metal Furries</h3>
-				<div class="youtube_video_insert" video="nQpLa5yMwBA"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/nQpLa5yMwBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br>
 			</details>
 			
@@ -95,7 +95,7 @@
 				in which i collaborated with some mapping, a dehacked turret and this theme.<br>
 				Its my first MIDI, so it isnt the best song that i made xD.
 				</p>
-				<div class="youtube_video_insert" video="snYtBhmoQpQ"></div>
+				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/snYtBhmoQpQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br>
 			</details>
 			
