AYUDA QUIERO TERMINAR IMPSCAPE ESTE AÑO PERO ME LA PASO ROBTOPEANDO AYUDA

--- a/index_es.html
+++ b/index_es.html
@@ -25,10 +25,10 @@
 			
 			<!-- CONTENIDO -->
 			<h1>Bienvenido a mi pagina!</h1>
-			<div id="oc_container"> <p>Cargando el oc (no furry)</p> </div>
+			<div id="oc_container"> <p>Cargando el oc (-n-o- -f-u-r-r-y- AYUDA FASOFSEFOEAWJFo)</p> </div>
 			<p>Hola! Soy URROVA, hago videojuegos, mods y musica.</p>	
 			<br><hr><br>
-			<h2>Ahora mismo trabajando en: <b>Literalmente Nada</b></h2>
+			<h2>Ahora mismo trabajando en: <b>Intentar terminar IMPSCAPE este año si es posible.</b></h2>
 			<br><hr><br>
 			
 			<h2>Links:</h2>
