--- a/mods.html
+++ b/mods.html
@@ -133,7 +133,7 @@
 				<br>
 
 				<div class="code_box">
-					<p>Note: im not a furry, i made this wad as a joke. Thank you.</p>
+					<p><del> Note: im not a furry, i made this wad as a joke. Thank you.</del> lol</p>
 				</div>
 				<br>
 			</details>
