--- a/mods_es.html
+++ b/mods_es.html
@@ -135,7 +135,7 @@
 				<p><a href="https://www.doomworld.com/forum/topic/114394-furdemon-my-first-singleplayer-doom-wad/">Ir al hilo de doomworld</a></p>
 				
 				<div class="code_box">
-					<p>Nota: no soy furry, hice este wad mas que nada como una joda. Gracias.</p>
+					<p> <del>Nota: no soy furry, hice este wad mas que nada como una joda. Gracias.</del> lol </p>
 				</div>
 
 				<br>
