ACTUALIZACION (Hice muuuuuuuuchas cosas vean mi comit y de paso mi pagina lol)

--- a/html_modules/footer.html
+++ b/html_modules/footer.html
@@ -23,6 +23,6 @@
     </script>
     -->
 
-    <p>Looking for what i can put on the footer . . .</p>
+    <!--p>Looking for what i can put on the footer . . .</p-->
 
 </center>
