--- a/html_modules/footer_es.html
+++ b/html_modules/footer_es.html
@@ -23,5 +23,5 @@
     </script>
     -->
 
-    <p>Viendo que puedo poner en el footer   . . .</p>
+    <!--p>Viendo que puedo poner en el footer   . . .</p-->
 </center>
