--- a/html_modules/navbar_es.html
+++ b/html_modules/navbar_es.html
@@ -1,6 +1,5 @@
 <center class="Navbar">
-	<p align="left" class="idioma"><a href="index.html">English</a></p>
-	<h1 style="display:inline">- URROVA -</h1>
+	<h1>- URROVA -</h1>
 	<marquee id="Navbar_marquee">NO SE PROGRAMAR</marquee>
 	<hr>
 	<ul class="Navbar_Buttons_Desktop">
@@ -11,6 +10,8 @@
 		<li><a href="mods_es.html" target="_parent">Mods</a></li>
 		<li>∙</li>
 		<li><a href="music_es.html" target="_parent">Musica</a></li>
+		<li>---</li>
+		<li class="idioma"><a href="index.html">English</a></li>
 	</ul>
 	<details class="Navbar_Buttons_Mobile">
 		<summary><p style="display:inline">Expander</p></summary>
@@ -18,5 +19,7 @@
 		<!-- <p><a href="vgames_es.html" target="_parent">Videojuegos</a></p> -->
 		<p><a href="mods_es.html" target="_parent">Mods</a></p>
 		<p><a href="music_es.html" target="_parent">Musica</a></p>
+		<p>---</p>
+		<p class="idioma"><a href="index.html">English</a></p>
 	</details>
 </center>
