--- a/html_modules/navbar.html
+++ b/html_modules/navbar.html
@@ -1,6 +1,5 @@
 <center class="Navbar">
-	<p align="left" class="idioma"><a href="index_es.html">Español</a></p>
-	<h1 style="display:inline">- URROVA -</h1>
+	<h1>- URROVA -</h1>
 	<marquee id="Navbar_marquee">I DONT KNOW HOW TO PROGRAM</marquee>
 	<hr>
 	<ul class="Navbar_Buttons_Desktop">
@@ -11,12 +10,17 @@
 		<li><a href="mods.html" target="_parent">Mods</a></li>
 		<li>∙</li>
 		<li><a href="music.html" target="_parent">Music</a></li>
+		<li> --- </li>
+		<li class="idioma"><a href="index_es.html">Español</a></li>
 	</ul>
 	<details class="Navbar_Buttons_Mobile">
+		
 		<summary><p style="display:inline">Expand</p></summary>
 		<p><a href="index.html" target="_parent">Home</a></p>
 		<!-- <p><a href="vgames.html" target="_parent">Videogames</a></p> -->
 		<p><a href="mods.html" target="_parent">Mods</a></p>
 		<p><a href="music.html" target="_parent">Music</a></p>
+		<p>---</p>
+		<p class="idioma"><a href="index_es.html">Español</a></p>
 	</details>
 </center>
