actualice el link de rocketed

--- a/mods.html
+++ b/mods.html
@@ -59,7 +59,7 @@
 								<p>This mod is licensed under the CC-BY-SA license. You can modify it and distribute modified copies, only if you give me credit and give it the same license.</p>
 								
 								<p class="center">
-									<a href="https://mega.nz/folder/naAlSZDC#rDFvf6Q2wUGPjphBWqTggw" class="button">Download from mega.nz</a>
+									<a href="https://urrova.itch.io/rocketed" class="button">Download from itch.io</a>
 								</p>
 				
 								<p class="center">
