--- a/mods_es.html
+++ b/mods_es.html
@@ -63,7 +63,7 @@
 							<p>Este mod esta licenciado bajo la licencia CC-BY-SA. Podes modificarlo y distribuir copias modificadas, pero dame credito.</p>
 			
 							<p class="center">
-								<a href="https://mega.nz/folder/naAlSZDC#rDFvf6Q2wUGPjphBWqTggw" class="button">Descargar desde mega.nz</a>
+								<a href="https://urrova.itch.io/rocketed" class="button">Descargar desde itch.io</a>
 							</p>
 			
 							<p class="center">
