Cosas nuevas para mi pagina XD (ningun detalle alguno)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 			<div id="oc_container"> <p>Loading my OC (no furry)</p> </div>
 			<p>Hi! I'm URROVA. I make videogames, mods and music.</p>	
 			<br><hr><br>
-			<h2>Right now working on: <b>Trying to finish IMPSCAPE this year if possible.</b></h2>
+			<h2>Right now working on: <b>Finishing IMPSCAPE!!</b></h2>
+			<div>
+				<a href="https://github.com/Urrova/IMPSCAPE">
+					<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen_small">
+				</a>
+			</div>
 			<br><hr><br>
  
 			<h2>Links:</h2>
