--- a/index_es.html
+++ b/index_es.html
@@ -28,7 +28,12 @@
 			<div id="oc_container"> <p>Cargando el oc (-n-o- -f-u-r-r-y- AYUDA FASOFSEFOEAWJFo)</p> </div>
 			<p>Hola! Soy URROVA, hago videojuegos, mods y musica.</p>	
 			<br><hr><br>
-			<h2>Ahora mismo trabajando en: <b>Intentar terminar IMPSCAPE este año si es posible.</b></h2>
+			<h2>Ahora mismo trabajando en: <b>Terminando IMPSCAPE!!</b></h2>
+			<div>
+				<a href="https://github.com/Urrova/IMPSCAPE">
+					<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen_small">
+				</a>
+			</div>
 			<br><hr><br>
 			
 			<h2>Links:</h2>
