--- a/mods.html
+++ b/mods.html
@@ -23,9 +23,15 @@
 			<!-- CONTENIDO -->
 			<h1>
 				<img src="images/cacoanim2.gif" alt="caco1">
-				My Doom Mods
+				Doom Mods
 				<img src="images/cacoanim2.gif" alt="caco2">
 			</h1>
+
+			<div class="center">
+				<p>I'm ashamed of having made too many mods for this game lol.</p>
+				<p>Don't have doom? Download freedoom from <a href="https://freedoom.github.io/">this site</a> (or buy it from steam).</p>
+				<br>
+			</div>
 			
 			<!-- Rocketed -->
 			<article class="article_mods_rocketed">
@@ -125,7 +131,7 @@
 				<table>
 					<tr>
 						<td width="35%">
-							<div class="videowrapper">
+							<div class="youtube-video-container">
 								<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/kRN8CzcrLwg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</td>
@@ -235,7 +241,7 @@
 				<p>You can make what you want with these</p>
 
 				<p class="center">
-					<a href="#" class="button" title="My mega.nz account going boom be like: XD"><del>Download from mega</del></a>
+					<a href="https://drive.google.com/drive/folders/1ZXkwSZfqZ6BToYtfwdU-lGBCI8s4rL-G?usp=sharing" class="button" title="d o w n l o a d">Download from Google Drive</a>
 				</p>
 				
 				<p class="center">
