--- a/mods_es.html
+++ b/mods_es.html
@@ -27,6 +27,12 @@
 				<img src="images/cacoanim2.gif" alt="caco2">
 			</h1>
 			
+			<div class="center">
+				<p>La verdad que me averguenzo de haberle hecho tantos mods para este juego XD.</p>
+				<p>No tenes doom? Descarga freedoom desde <a href="https://freedoom.github.io/">este sitio</a> (o compralo por steam).</p>
+				<br>
+			</div>
+
 			<!-- Rocketed -->
 			<article class="article_mods_rocketed">
 			<!--article style="background:var(--section_color);"-->
@@ -131,7 +137,7 @@
 				<table>
 					<tr>
 						<td width="35%">
-							<div class="videowrapper">
+							<div class="youtube-video-container">
 								<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/kRN8CzcrLwg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</td>
@@ -242,7 +248,7 @@
 				<p>Pueden hacer lo que quieran con estos.</p>
 
 				<p class="center">
-					<a href="#" class="button" title="Mi cuenta de mega.nz a punto de autodestruirse: XD"><del>Descargar desde mega</del></a>
+					<a href="https://drive.google.com/drive/folders/1ZXkwSZfqZ6BToYtfwdU-lGBCI8s4rL-G?usp=sharing" class="button" title="bajocargar">Descargar desde Google Drive</a>
 				</p>
 				
 				<p class="center">
