--- a/music_es.html
+++ b/music_es.html
@@ -182,7 +182,7 @@
 			<p>Toda mi musica esta licenciada por la Creative Commons Atribucion, podes usarla pero dame credito.</p>
 			<p>Podes descargar mi musica / MIDIs desde su carpeta de Google Drive.</p>
 			<p>
-				<a href="https://drive.google.com/drive/folders/1RXqqmiHip-S6tNq_O-gB3SRkMmUQkpcl?usp=sharing" class="button">Descarga mi musica (desde GDrive)</a>
+				<a href="https://drive.google.com/drive/folders/1RXqqmiHip-S6tNq_O-gB3SRkMmUQkpcl?usp=sharing" class="button">Descarga mi musica (desde Google Drive)</a>
 			</p>
 			</center>
 			<br>
