IMPSCAPE OST + Soundcloud

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 					<p>Youtube</p>
 				</a>
 			</div>
+
+			<div class = "SocialNetIcon">
+				<a href="https://on.soundcloud.com/iZZQd" title="My soundcloud account.">
+					<i class="fa-brands fa-soundcloud fa-10x SVGicon"></i>
+					<p>Soundcloud</p>
+				</a>
+			</div>
 			
 			<br>
 
