--- a/music_es.html
+++ b/music_es.html
@@ -30,28 +30,10 @@
 			<!-- IMPSCAPE OST-->
 			<details>
 				<summary><h2 class="displayInline">Soundtrack de IMPSCAPE</h2></summary>
-				<p>Tengo planeado hacer todo el soundtrack de IMPSCAPE. Por ahora las que tengo son:</p>
-				<ul class="greenBG">
-					<li>
-						ミラーリングされた火星: Un tema inspirado en The Shining Needle Castle sinking on the air, de touhou 14. Lo voy a usar para MAP07, la supercomputadora.
-					</li>
-					<li>
-						Robotic Invasion: Un tema para MAP06, los exteriores de la UAC. Un tema con muchos sintes de onda cuadrada y de sierra.
-					</li>
-				</ul>
-				
+				<p>Hice todo el soundtrack de IMPSCAPE, disponible en Soundcloud.</p>
 				<hr>
-				<h3>ミラーリングされた火星</h3>
-				<div class="youtube-video-container">
-				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/5lp35swHGHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
-				<hr>
-				<h3>Robotic Invasion</h3>
-				<div class="youtube-video-container">
-				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/YGAwR3g_rLc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
+				<br>
+				<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1745338929&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-622092853-302145212" title="URROVA" target="_blank" style="color: #cccccc; text-decoration: none;">URROVA</a> · <a href="https://soundcloud.com/user-622092853-302145212/sets/impscape-soundtrack" title="IMPSCAPE Soundtrack" target="_blank" style="color: #cccccc; text-decoration: none;">IMPSCAPE Soundtrack</a></div>
 				<br>
 			</details>
 			
