--- a/music.html
+++ b/music.html
@@ -30,26 +30,10 @@
 			<!-- IMPSCAPE OST-->
 			<details>
 				<summary><h2 class="displayInline">IMPSCAPE OST</h2></summary>
-				<p>I have planned making all the soundtrack of IMPSCAPE. For now the themes are:</p>
-				<ul class="greenBG">
-					<li>
-						ミラーリングされた火星: A theme inspired on The Shining Needle Castle sinking on the air, from touhou 14. I will use it for MAP07, the supercomputer.
-					</li>
-					<li>
-						Robotic Invasion: A theme for MAP06, the UAC exteriors, with a lot of Saw and Square synths
-					</li>
-				</ul>
+				<p>I made the entire IMPSCAPE soundtrack, available on soundcloud.</p>
 				<hr>
-				<h3>ミラーリングされた火星</h3>
-				<div class="youtube-video-container">
-				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/5lp35swHGHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
-				<hr>
-				<h3>Robotic Invasion</h3>
-				<div class="youtube-video-container">
-				<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/YGAwR3g_rLc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
+				<br>
+				<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1745338929&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-622092853-302145212" title="URROVA" target="_blank" style="color: #cccccc; text-decoration: none;">URROVA</a> · <a href="https://soundcloud.com/user-622092853-302145212/sets/impscape-soundtrack" title="IMPSCAPE Soundtrack" target="_blank" style="color: #cccccc; text-decoration: none;">IMPSCAPE Soundtrack</a></div>
 				<br>
 			</details>
 
