Muchas cosas para actualizar la pagina X D D D D D D

--- a/mods.html
+++ b/mods.html
@@ -28,7 +28,7 @@
 			</h1>
 
 			<div class="center">
-				<p>I'm ashamed of having made too many mods for this game lol.</p>
+				<p>I like FPS games from the year of the fart lol.</p>
 				<p>Don't have doom? Download freedoom from <a href="https://freedoom.github.io/">this site</a> (or buy it from steam).</p>
 				<br>
 			</div>
@@ -165,7 +165,10 @@
 							<br>
 
 							<div class="code_box">
-								<p><del> Note: im not a furry, i made this wad as a joke. Thank you.</del> lol</p>
+								<details>
+									<summary><p>Note: I'm not a furry, i made this wad as a joke. Thank you.</p></summary>
+									<img src="images/xd/perturbado1.webp" alt="...">
+								</details>
 							</div>
 						</div></div>
 							<br>
