--- a/mods_es.html
+++ b/mods_es.html
@@ -28,7 +28,7 @@
 			</h1>
 			
 			<div class="center">
-				<p>La verdad que me averguenzo de haberle hecho tantos mods para este juego XD.</p>
+				<p>Me gustan los juegos FPS del año del pedo lol.</p>
 				<p>No tenes doom? Descarga freedoom desde <a href="https://freedoom.github.io/">este sitio</a> (o compralo por steam).</p>
 				<br>
 			</div>
@@ -168,9 +168,12 @@
 								<a href="https://www.doomworld.com/forum/topic/114394-furdemon-my-first-singleplayer-doom-wad/">Ir a su hilo de doomworld</a>
 							</p>
 							<br>
-
+							
 							<div class="code_box">
-								<p> <del>Nota: no soy furry, hice este wad mas que nada como una joda. Gracias.</del> lol </p>
+								<details>
+									<summary><p>Nota: no soy furry, hice este wad mas que nada como una joda. Gracias.</p></summary>
+									<img src="images/xd/perturbado1.webp" alt="...">
+								</details>
 							</div>
 
 						</div></div>
