--- a/music_es.html
+++ b/music_es.html
@@ -28,7 +28,7 @@
 			<h2>Soundtracks</h2>
 			
 			<!-- IMPSCAPE OST-->
-			<details>
+			<details class="details_article">
 				<summary><h2 class="displayInline">Soundtrack de IMPSCAPE</h2></summary>
 				<p>Hice todo el soundtrack de IMPSCAPE, disponible en Soundcloud.</p>
 				<hr>
@@ -38,7 +38,7 @@
 			</details>
 			
 			<!-- DIMENSIONAL WEIRDNESS OST-->
-			<details>
+			<details class="details_article">
 				<summary><h2 class="displayInline">Soundtrack de Dimensional Weirdness</h2></summary>
 				<p>Yo hice 2 temas para Dimensional Weirdness: <b>A Complete dimension for demons</b> y <b>Final Hell</b>
 				Los otros dos temas son Give In with pleasure, sacado de Memento Mori II (la de MAP01), y 
@@ -60,7 +60,7 @@
 			</details>
 			
 			<!-- FURDEMON OST-->
-			<details>
+			<details class="details_article">
 				<summary><h2 class="displayInline">Soundtrack de FURDEMON</h2></summary>
 				<p>Yo hice 2 temas para furdemon: <b>OpulenGZ</b> y <b>Metal Furries.</b> Las demas son los temas originales del DOOM 2.</p>
 				<hr>
@@ -81,7 +81,7 @@
 
 			
 			<!-- MIDIs -->
-			<details>
+			<details class="details_article">
 				<summary>
 					<h2 class="displayInline">MIDI</h2>
 				</summary>
