--- a/index_es.html
+++ b/index_es.html
@@ -26,7 +26,7 @@
 			<!-- CONTENIDO -->
 			<h1>Bienvenido a mi pagina!</h1>
 			<div id="oc_container"> <p>Cargando el oc (-n-o- -f-u-r-r-y- AYUDA FASOFSEFOEAWJFo)</p> </div>
-			<p>Hola! Soy URROVA, hago videojuegos, mods y musica.</p>	
+			<p>Hola! Soy URROVA, hago mods y musica.</p>	
 			<br><hr><br>
 			<h2>Ahora mismo trabajando en: <b>Terminando IMPSCAPE!!</b></h2>
 			<div>
