Agregue un sobre mi o algo asi (solo español)

--- a/html_modules/footer.html
+++ b/html_modules/footer.html
@@ -1,5 +1,5 @@
 <center class = "Footer">
-    <!--
+    
     <table>
     <tr><td>
         <center>
@@ -21,8 +21,10 @@
         var counter2 = document.getElementById("Counter_loader2");
         counter2.innerHTML = '<img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=2&D=8&N=0&M=0" alt="" border="0" />';
     </script>
+    
+
+    <!--
+    <br>
+    <p class="SmallP">[empty section waiting to be filled]</p>
     -->
-
-    <!--p>Looking for what i can put on the footer . . .</p-->
-
 </center>
