--- a/html_modules/footer_es.html
+++ b/html_modules/footer_es.html
@@ -1,5 +1,5 @@
 <center class = "Footer">
-    <!--
+    
     <table>
     <tr><td>
         <center>
@@ -21,7 +21,10 @@
         var counter2 = document.getElementById("Counter_loader2");
         counter2.innerHTML = '<img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=2&D=8&N=0&M=0" alt="" border="0" />';
     </script>
-    -->
+    
 
-    <!--p>Viendo que puedo poner en el footer   . . .</p-->
+    <!--
+    <br>
+    <p class="SmallP">[espacio vacio a espera de ser rellenado]</p>
+    -->
 </center>
