--- a/html_modules/navbar_es.html
+++ b/html_modules/navbar_es.html
@@ -10,15 +10,18 @@
 		<li><a href="mods_es.html" target="_parent">Mods</a></li>
 		<li>∙</li>
 		<li><a href="music_es.html" target="_parent">Musica</a></li>
+		<li>∙</li>
+		<li><a href="aboutme_es.html" target="_parent">Urrova</a></li>
 		<li>---</li>
 		<li class="idioma"><a href="index.html">English</a></li>
 	</ul>
 	<details class="Navbar_Buttons_Mobile">
-		<summary><p style="display:inline">Expander</p></summary>
+		<summary><p style="display:inline">Expandir</p></summary>
 		<p><a href="index_es.html" target="_parent">Inicio</a></p>
 		<!-- <p><a href="vgames_es.html" target="_parent">Videojuegos</a></p> -->
 		<p><a href="mods_es.html" target="_parent">Mods</a></p>
 		<p><a href="music_es.html" target="_parent">Musica</a></p>
+		<p><a href="aboutme_es.html" target="_parent">Urrova</a></p>
 		<p>---</p>
 		<p class="idioma"><a href="index.html">English</a></p>
 	</details>
