--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			<!-- CONTENIDO -->
 			<h1>Welcome to my webpage!</h1>
-			<div id="oc_container"> <p>Loading my OC (no furry)</p> </div>
+			<div id="oc_container"> <p>Loading character . . .</p> </div>
 			<p>Hi! I'm URROVA. I make mods and music.</p>	
 			<br><hr><br>
 			<h2>Right now working on: <b>Finishing IMPSCAPE!!</b></h2>
