--- a/index_es.html
+++ b/index_es.html
@@ -17,15 +17,14 @@
 		<script src="js/zepto v1.2.0.js"></script>
 	</head>
 	<body>
-		<center>
-		
+		<div class="center">
 			<!-- Barra de navegacion -->
 			<div id="Navbar_loader"> <p>Cargando Navbar...</p> </div>
 			
 			
 			<!-- CONTENIDO -->
 			<h1>Bienvenido a mi pagina!</h1>
-			<div id="oc_container"> <p>Cargando el oc (-n-o- -f-u-r-r-y- AYUDA FASOFSEFOEAWJFo)</p> </div>
+			<div id="oc_container"> <p>Cargando personaje . . .</p> </div>
 			<p>Hola! Soy URROVA, hago mods y musica.</p>	
 			<br><hr><br>
 			<h2>Ahora mismo trabajando en: <b>Terminando IMPSCAPE!!</b></h2>
@@ -76,7 +75,7 @@
 			<br>
 
 			<div id="Footer_loader"> <p>Cargando footer...</p> </div>
-		</center>
+		</div>
 		
 
 		<!-- JAVASCRIPT HERE -->
