--- a/music_es.html
+++ b/music_es.html
@@ -159,18 +159,17 @@
 			
 			<br>
 
-			<center>
-			<!-- Boton de carpeta de GDrive -->
-			<p>Toda mi musica esta licenciada por la Creative Commons Atribucion, podes usarla pero dame credito.</p>
-			<p>Podes descargar mi musica / MIDIs desde su carpeta de Google Drive.</p>
-			<p>
-				<a href="https://drive.google.com/drive/folders/1RXqqmiHip-S6tNq_O-gB3SRkMmUQkpcl?usp=sharing" class="button">Descarga mi musica (desde Google Drive)</a>
-			</p>
-			</center>
+			<div class="center">
+				<!-- Boton de carpeta de GDrive -->
+				<p>Toda mi musica esta licenciada por la Creative Commons Atribucion, podes usarla pero dame credito.</p>
+				<p>Podes descargar mi musica / MIDIs desde su carpeta de Google Drive.</p>
+				<p>
+					<a href="https://drive.google.com/drive/folders/1RXqqmiHip-S6tNq_O-gB3SRkMmUQkpcl?usp=sharing" class="button">Descarga mi musica (desde Google Drive)</a>
+				</p>
+			</div>
 			<br>
 
 			<div id="Footer_loader"> <p>Cargando footer...</p> </div>
-		</center>
 		<!-- JAVASCRIPT HERE -->
 		<script src="scripts.js"></script>
 	</body>
