--- a/vgames.html
+++ b/vgames.html
@@ -16,14 +16,13 @@
 		<script src="js/zepto v1.2.0.js"></script>
 	</head>
 	<body>
-		<center>
 			<!-- Barra de navegacion -->
 			<div id="Navbar_loader"> <p>Loading Navbar...</p> </div>
 			
 			<!-- CONTENIDO -->
 			<h1>My videogames</h1>
 
-			<p class="code_box">
+			<p class="code_box center">
 				<br>
 				I see you discovered a secret webpage??? <br>
 				This is my videogames webpage, but there is no good stuff right now, so i have disabled it. <br>
@@ -70,7 +69,6 @@
 			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 			
 			<div id="Footer_loader"> <p>Loading footer...</p> </div>
-		</center>
 		<!-- JAVASCRIPT HERE -->
 		<script src="scripts.js"></script>
 	</body>
