--- a/music.html
+++ b/music.html
@@ -158,14 +158,14 @@
 			
 			<br>
 
-			<center>
+			<div class="center">
 				<!--Boton de la carpeta de GDrive -->
 				<p>All my music are licenced by the Creative Commons-Attribution licence, you can use it but give me credit.</p>
 				<p>You can download my music / MIDIs from their Google Drive Folder</p>
 				<p>
 					<a href="https://drive.google.com/drive/folders/1RXqqmiHip-S6tNq_O-gB3SRkMmUQkpcl?usp=sharing" class="button">Download my music (from Google Drive)</a>
 				</p>
-			</center>
+			</div>
 
 			<br>
 			
