--- a/html_modules/footer.html
+++ b/html_modules/footer.html
@@ -5,6 +5,9 @@
         <center>
             <p class="SmallP">Visit counter</p>
             <div id="Counter_loader1">
+                <!-- hitwebcounter Code START -->
+                <a href="https://www.hitwebcounter.com" target="_blank">
+                <img src="https://hitwebcounter.com/counter/counter.php?page=11096284&style=0025&nbdigits=8&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
             </div>
         </center>
     </td>
@@ -12,16 +15,19 @@
         <center>
             <p class="SmallP">Unique visitor counter</p>
             <div id="Counter_loader2">
+                <!-- hitwebcounter Code START -->
+                <a href="https://www.hitwebcounter.com" target="_blank">
+                <img src="https://hitwebcounter.com/counter/counter.php?page=11096286&style=0025&nbdigits=8&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
             </div>
         </center>
     </td></tr>
     </table>
     <script>
-        var counter1 = document.getElementById("Counter_loader1");
-        counter1.innerHTML = '<img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=2&D=8&N=0&M=0" alt="" border="0" />';
+        //var counter1 = document.getElementById("Counter_loader1");
+        //counter1.innerHTML = '<img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=2&D=8&N=0&M=0" alt="" border="0" />';
 
-        var counter2 = document.getElementById("Counter_loader2");
-        counter2.innerHTML = '<img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=2&D=8&N=0&M=1" alt="" border="0" />';
+        //var counter2 = document.getElementById("Counter_loader2");
+        //counter2.innerHTML = '<img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=2&D=8&N=0&M=1" alt="" border="0" />';
     </script>
     
 
