--- a/html_modules/footer_es.html
+++ b/html_modules/footer_es.html
@@ -16,8 +16,7 @@
             <p class="SmallP">Contador de visitantes unicos</p>
             <div id="Counter_loader2">
                 <!-- hitwebcounter Code START -->
-                <a href="https://www.hitwebcounter.com" target="_blank">
-                <img src="https://hitwebcounter.com/counter/counter.php?page=11096286&style=0025&nbdigits=8&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
+                <a href="https://www.freecounterstat.com" title="visitor counter script"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=yhpjj1x957dq2dyzgu7j5f3yhbk248hs" border="0" title="visitor counter script" alt="visitor counter script"></a>
             </div>
         </center>
     </td></tr>
