--- a/html_modules/footer.html
+++ b/html_modules/footer.html
@@ -1,36 +1,13 @@
 <center class = "Footer">
-    
-    <table>
-    <tr><td>
-        <center>
-            <p class="SmallP">Visit counter</p>
-            <div id="Counter_loader1">
-                <!-- hitwebcounter Code START -->
-                <a href="https://www.hitwebcounter.com" target="_blank">
-                <img src="https://hitwebcounter.com/counter/counter.php?page=11096284&style=0025&nbdigits=8&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
-            </div>
-        </center>
-    </td>
-    <td>
-        <center>
-            <p class="SmallP">Unique visitor counter</p>
-            <div id="Counter_loader2">
-                <a href="https://www.freecounterstat.com" title="visitor counter script"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=yhpjj1x957dq2dyzgu7j5f3yhbk248hs" border="0" title="visitor counter script" alt="visitor counter script"></a>
-            </div>
-        </center>
-    </td></tr>
-    </table>
+    <p class="SmallP">Visit counter:</p>
+    <div id="Counter_loader"></div>
     <script>
-        //var counter1 = document.getElementById("Counter_loader1");
-        //counter1.innerHTML = '<img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=2&D=8&N=0&M=0" alt="" border="0" />';
-
-        //var counter2 = document.getElementById("Counter_loader2");
-        //counter2.innerHTML = '<img src="//counter.websiteout.net/compte.php?S='+encodeURI(window.location.hostname)+'&C=2&D=8&N=0&M=1" alt="" border="0" />';
+        var pageurl = window.location.href.split("://")[1];
+        var counter = document.getElementById("Counter_loader");
+        counter.innerHTML = '<a href="https://hits.sh/'+
+                                pageurl+
+                                '"><img alt="Hits" src="https://hits.sh/'+
+                                pageurl+
+                                '.svg?color=00ffff&labelColor=000000&logo=godotengine"/></a>';
     </script>
-    
-
-    <!--
-    <br>
-    <p class="SmallP">[empty section waiting to be filled]</p>
-    -->
 </center>
