about me english

--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<title>URROVA:/Index</title>
 		<link rel="stylesheet" href="styles.css">
@@ -47,7 +47,7 @@
 					(<a href="https://store.steampowered.com/app/519860/DUSK/">DUSK</a>;
 					<a href="https://store.steampowered.com/app/1229490/ULTRAKILL/">ULTRAKILL</a>). <br>
 					Tambien me gustan los FPS de hoy en dia, los juegos de ritmo (osu!; taiko; geometry dash; JSAB) y los shoot em ups, tendiendo a bullet hell (Touhou Project). <br>
-					Jugaria juegos online pero tengo un ping de mierda.
+					Jugaria juegos online pero tengo un ping de mierda (200 ms).
 				</p>
 
 				<p>
@@ -79,7 +79,7 @@
 					<a href="https://www.doomworld.com/forum/topic/141857-amalgoom-episode-1-the-red-valley-of-death-is-finally-here/">Alamgoom</a>). <br>
 				</p>
 				<br><br><br><br><br>
-				<p>Y hasta ahi llegue, no se me ocurre nada mas lol.</p>
+				<p><img src="images/under-construction.gif" alt=""></p>
 			</article>
 			
 			<div id="Footer_loader"> <p>Loading footer...</p> </div>
