correccion de cosas y 404

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>URROVA:/Index</title>
+		<title>URROVA:/index</title>
 		<link rel="stylesheet" href="styles.css" id="cssLink">
 		<script src="https://kit.fontawesome.com/f9565b969b.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="ingles">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
-		<meta property="og:title" content="URROVA:/Index"/>
+		<meta property="og:title" content="URROVA:/index"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="https://urrova.github.io/images/ogpic.png"/>
 		<meta property="og:url" content="https://urrova.github.io/"/>
