--- a/vgames_es.html
+++ b/vgames_es.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>URROVA:/Videogames</title>
+		<title>URROVA:/videogames_es</title>
 		<link rel="stylesheet" href="styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="espanol">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
-		<meta property="og:title" content="URROVA:/Videojuegos"/>
+		<meta property="og:title" content="URROVA:/videogames_es"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="https://urrova.github.io/images/ogpic.png"/>
 		<meta property="og:url" content="https://urrova.github.io/vgames_es.html"/>
