--- a/index_es.html
+++ b/index_es.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>URROVA:/Index</title>
+		<title>URROVA:/index_es</title>
 		<link rel="stylesheet" href="styles.css">
 		<script src="https://kit.fontawesome.com/f9565b969b.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="espanol">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
-		<meta property="og:title" content="URROVA:/Index"/>
+		<meta property="og:title" content="URROVA:/index_es"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="https://urrova.github.io/images/ogpic.png"/>
 		<meta property="og:url" content="https://urrova.github.io/index_es.html"/>
