--- a/mods_es.html
+++ b/mods_es.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>URROVA:/Mods</title>
+		<title>URROVA:/mods_es</title>
 		<link rel="stylesheet" href="styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="espanol">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
-		<meta property="og:title" content="URROVA:/Mods"/>
+		<meta property="og:title" content="URROVA:/mods_es"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="https://urrova.github.io/images/ogpic.png"/>
 		<meta property="og:url" content="https://urrova.github.io/mods.html"/>
