--- a/vgames.html
+++ b/vgames.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>URROVA:/Videogames</title>
+		<title>URROVA:/videogames</title>
 		<link rel="stylesheet" href="styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="ingles">
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 		<!--OpenGraph-->
-		<meta property="og:title" content="URROVA:/Index"/>
+		<meta property="og:title" content="URROVA:/videogames"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="https://urrova.github.io/images/ogpic.png"/>
 		<meta property="og:url" content="https://urrova.github.io/vgames.html"/>
