Bugfix: el navbar en ingles te llevaba al aboutme en español.

--- a/html_modules/navbar.html
+++ b/html_modules/navbar.html
@@ -11,7 +11,7 @@
 		<li>∙</li>
 		<li><a href="music.html" target="_parent">Music</a></li>
 		<li>∙</li>
-		<li><a href="aboutme_es.html" target="_parent">Urrova</a></li>
+		<li><a href="aboutme.html" target="_parent">Urrova</a></li>
 		<li> --- </li>
 		<li class="idioma"><a href="index_es.html">Español</a></li>
 	</ul>
@@ -22,7 +22,7 @@
 		<!-- <p><a href="vgames.html" target="_parent">Videogames</a></p> -->
 		<p><a href="mods.html" target="_parent">Mods</a></p>
 		<p><a href="music.html" target="_parent">Music</a></p>
-		<p><a href="aboutme_es.html" target="_parent">Urrova</a></p>
+		<p><a href="aboutme.html" target="_parent">Urrova</a></p>
 		<p>---</p>
 		<p class="idioma"><a href="index_es.html">Español</a></p>
 	</details>
