+bandera de argentina; +cambios en mods;

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 	</head>
 	<body>	
 		<center>
-			
 			<!-- Barra de navegacion -->
 			<div id="Navbar_loader"> <p>Loading Navbar...</p> </div>
 
 			<!-- CONTENIDO -->
 			<h1>Welcome to my webpage!</h1>
 			<div id="oc_container"> <p>Loading character . . .</p> </div>
-			<p>Hi! I'm URROVA. I make mods and music.</p>	
+			<p>Greetings from Argentina <img src="images/flags/argentina-flag-3d-icon-16.png" alt="AR">.</p>
 			<br><hr><br>
 			<h2>Right now working on: <b>Finishing IMPSCAPE!!</b></h2>
 			<div>
