--- a/mods.html
+++ b/mods.html
@@ -226,42 +226,9 @@
 					</tr>
 				</table>
 			</article>
-
-			<article style="background:var(--section_color);">
-				<h2>Random maps</h2>
-				<br>
-				<p>There are various random doom maps that i made.</p>
-
-				<p>These are:</p>
-				<ul class="code_box">
-				<li><a>Rising Base</a>: A map that showcases mikoscrollers, or vanilla vertical scrolling walls. Only runs on vanilla.</li>
-				<li><a>VOBM Labs</a>: Very Original Boom Map. The first boom compatible map that i made</li>
-				<li><a>ANCENTER</a>: Deathmatch map for ZDaemon</li>
-				<li><a>NUKEMAP</a>: Deathmatch map for GZDoom/Zandronum with nukes</li>
-				</ul>
-
-				<p>You can make what you want with these</p>
-
-				<p class="center">
-					<a href="https://drive.google.com/drive/folders/1ZXkwSZfqZ6BToYtfwdU-lGBCI8s4rL-G?usp=sharing" class="button" title="d o w n l o a d">Download from Google Drive</a>
-				</p>
-				
-				<p class="center">
-					<a href="https://www.doomworld.com/idgames/levels/doom2/deathmatch/Ports/a-c/ancenter">ANCENTER on /idgames</a>
-				</p>
-				<br>
-			</article>
-
-			<br><br>
 			
-			<h1>
-				<img src="images/cacoanim2.gif" alt="caco3">
-				Collab Doom Mods
-				<img src="images/cacoanim2.gif" alt="caco4">
-			</h1>
-
 			<article class="article_mods_negativeone">
-				<h2>Doom -1 (NEGATIVEONE)</h2>
+				<h2>[Collab] Doom -1 (NEGATIVEONE)</h2>
 				<br>
 				<table>
 					<tr>
@@ -304,6 +271,32 @@
 					</tr>
 				</table>
 			</article>
+
+			<article style="background:var(--section_color);">
+				<h2>Random maps</h2>
+				<br>
+				<p>There are various random doom maps that i made.</p>
+
+				<p>These are:</p>
+				<ul class="code_box">
+				<li><a>Rising Base</a>: A map that showcases mikoscrollers, or vanilla vertical scrolling walls. Only runs on vanilla.</li>
+				<li><a>VOBM Labs</a>: Very Original Boom Map. The first boom compatible map that i made</li>
+				<li><a>ANCENTER</a>: Deathmatch map for ZDaemon</li>
+				<li><a>NUKEMAP</a>: Deathmatch map for GZDoom/Zandronum with nukes</li>
+				</ul>
+
+				<p>You can make what you want with these</p>
+
+				<p class="center">
+					<a href="https://drive.google.com/drive/folders/1ZXkwSZfqZ6BToYtfwdU-lGBCI8s4rL-G?usp=sharing" class="button" title="d o w n l o a d">Download from Google Drive</a>
+				</p>
+				
+				<p class="center">
+					<a href="https://www.doomworld.com/idgames/levels/doom2/deathmatch/Ports/a-c/ancenter">ANCENTER on /idgames</a>
+				</p>
+				<br>
+			</article>
+
 			<br>
 			
 			<div id="Footer_loader"> <p>Loading footer...</p> </div>
