--- a/mods_es.html
+++ b/mods_es.html
@@ -234,41 +234,8 @@
 				</table>
 			</article>
 
-			<article style="background:var(--section_color);">
-				<h2>Varios mapas sueltos</h2>
-				<br>
-				<p>Estos son varios mapas sueltos que hice.</p>
-
-				<p>Estos son:</p>
-				<ul class="code_box">
-				<li><a>Rising Base</a>: Un mapa que muestra mikoscrollers, o scrollers verticales para vanilla. Solo corre en vanilla.</li>
-				<li><a>VOBM Labs</a>: Mapa Compatible con boom Muy Original. El primer mapa compatible con boom que hago</li>
-				<li><a>ANCENTER</a>: Mapa deathmatch para ZDaemon</li>
-				<li><a>NUKEMAP</a>: Mapa deathmatch para GZDoom/Zandronum con bombas nucleares que caen de vez en cuando.</li>
-				</ul>
-
-				<p>Pueden hacer lo que quieran con estos.</p>
-
-				<p class="center">
-					<a href="https://drive.google.com/drive/folders/1ZXkwSZfqZ6BToYtfwdU-lGBCI8s4rL-G?usp=sharing" class="button" title="bajocargar">Descargar desde Google Drive</a>
-				</p>
-				
-				<p class="center">
-					<a href="https://www.doomworld.com/idgames/levels/doom2/deathmatch/Ports/a-c/ancenter">ANCENTER en /idgames</a>
-				</p>
-				<br>
-			</article>
-
-			<br><br>
-			
-			<h1>
-				<img src="images/cacoanim2.gif" alt="caco3">
-				Mods de Doom Colaborativos
-				<img src="images/cacoanim2.gif" alt="caco4">
-			</h1>
-
 			<article class="article_mods_negativeone">
-				<h2>Doom -1 (NEGATIVEONE)</h2>
+				<h2>[Collab] Doom -1 (NEGATIVEONE)</h2>
 				<br>
 				<table>
 					<tr>
@@ -313,7 +280,31 @@
 					</tr>
 				</table>
 			</article>
-			<br>
+			
+			<article style="background:var(--section_color);">
+				<h2>Varios mapas sueltos</h2>
+				<br>
+				<p>Estos son varios mapas sueltos que hice.</p>
+
+				<p>Estos son:</p>
+				<ul class="code_box">
+				<li><a>Rising Base</a>: Un mapa que muestra mikoscrollers, o scrollers verticales para vanilla. Solo corre en vanilla.</li>
+				<li><a>VOBM Labs</a>: Mapa Compatible con boom Muy Original. El primer mapa compatible con boom que hago</li>
+				<li><a>ANCENTER</a>: Mapa deathmatch para ZDaemon</li>
+				<li><a>NUKEMAP</a>: Mapa deathmatch para GZDoom/Zandronum con bombas nucleares que caen de vez en cuando.</li>
+				</ul>
+
+				<p>Pueden hacer lo que quieran con estos.</p>
+
+				<p class="center">
+					<a href="https://drive.google.com/drive/folders/1ZXkwSZfqZ6BToYtfwdU-lGBCI8s4rL-G?usp=sharing" class="button" title="bajocargar">Descargar desde Google Drive</a>
+				</p>
+				
+				<p class="center">
+					<a href="https://www.doomworld.com/idgames/levels/doom2/deathmatch/Ports/a-c/ancenter">ANCENTER en /idgames</a>
+				</p>
+				<br>
+			</article>
 			
 			<div id="Footer_loader"> <p>Descargando footer</p> </div>
 		<!-- JAVASCRIPT HERE -->
