--- a/index_es.html
+++ b/index_es.html
@@ -25,7 +25,7 @@
 			<!-- CONTENIDO -->
 			<h1>Bienvenido a mi pagina!</h1>
 			<div id="oc_container"> <p>Cargando personaje . . .</p> </div>
-			<p>Hola! Soy URROVA, hago mods y musica.</p>	
+			<p>Saludos desde Argentina <img src="images/flags/argentina-flag-3d-icon-16.png" alt="AR">.</p>
 			<br><hr><br>
 			<h2>Ahora mismo trabajando en: <b>Terminando IMPSCAPE!!</b></h2>
 			<div>
