--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="css/404.css">
+    <link rel="stylesheet" href="css/page_specific/404.css">
     <title>😱😱Cuatrocientos cuatro😱😱</title>
 </head>
 <body>
