--- a/index.html
+++ b/index.html
@@ -26,11 +26,25 @@
 			<div id="oc_container"> <p>Loading character . . .</p> </div>
 			<p>Greetings from Argentina <img src="images/flags/argentina-flag-3d-icon-16.png" alt="AR">.</p>
 			<br><hr><br>
-			<h2>Right now working on: <b>Finishing IMPSCAPE!!</b></h2>
-			<div>
-				<a href="https://github.com/Urrova/IMPSCAPE">
-					<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen_small">
-				</a>
+			<div class="flexbox-container">
+				<div class="flexbox-box greenBG">
+					<h2>Right now working on: nothing lol</h2>
+					<img src="images/xd/el_gobierno_gobierna.webp" alt="el gobierno gobierna" class="imagen_small">
+				</div>
+				<div class="flexbox-box greenBG">
+					<h2>NEWS:</h2>
+					<!--
+					<h3>IMPSCAPE is out! Go play it! → → →</h3>
+					<div>
+						<a href="https://github.com/Urrova/IMPSCAPE">
+							<img src="images/impscape/COVER.png" alt="IMPSCAPE Cover" class="imagen">
+						</a>
+					</div>
+					-->
+					<h3>. . .</h3>
+					<br>
+					<img src="images/xd/bola_de_paja.gif" alt="paja" class="imagen">
+				</div>
 			</div>
 			<br><hr><br>
  
